--- a/style.css
+++ b/style.css
@@ -37,8 +37,7 @@ nav ul li:hover ul{
 }
 
 .container img {
-    display: inline;
-    margin: 20px 20px;
+    margin: 20px 0px;
 }
 
 .navbar-brand {
@@ -83,38 +82,11 @@ thead {
 }
 
 .sidenav {
-    position: absolute;
+    /*position: absolute;
     top: 15%;
-    left: 115%;
+    left: 115%;*/
+    margin-left: 10px;
     background-color: rgb(226, 225, 225);
-}
-
-.first_footer{
-    position: relative;
-    width:100%;
-    background-color: rgb(19, 172, 121);
-    height:5px;
-    margin: 250px 100px 0px 0px;
-    margin-top: 5px
-   
-}
-
-.Sec_footer{
-    position: relative;
-    width:100%;
-    background-color: grey;
-    height:50px;
-    margin: 0px 0px 0px 0px;
-    margin-top: 5px
-    
-
-}
-
-.copy_right{
-    color:white;
-    text-align: center;
-    vertical-align: middle;
-    line-height: 45px; 
 }
 
 
